wk_taa_taaqa/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>ARMS_Request_ID__c</fullName>
        <description>Required by Audit</description>
        <inlineHelpText>Required by Audit</inlineHelpText>
        <label>ARMS Request ID</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostCenter__c</fullName>
        <label>Cost Center</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custodial_Rep__c</fullName>
        <inlineHelpText>Only required on Open Territory users</inlineHelpText>
        <label>Custodial Rep</label>
        <relationshipName>Custodial_on_Territories</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>DSM_Email__c</fullName>
        <formula>Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTN__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>External Id for User</inlineHelpText>
        <label>DTN</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>High_Level_Division__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Executives</fullName>
                    <color>#AFCADF</color>
                </value>
                <value>
                    <fullName>A&amp;A Solution Architects</fullName>
                    <color>#0B6FCE</color>
                </value>
                <value>
                    <fullName>Admin</fullName>
                    <color>#78C953</color>
                </value>
                <value>
                    <fullName>Alliance</fullName>
                    <color>#E27001</color>
                </value>
                <value>
                    <fullName>Billing</fullName>
                    <color>#A845DC</color>
                </value>
                <value>
                    <fullName>Books &amp; Journal Sales</fullName>
                    <color>#F3D904</color>
                </value>
                <value>
                    <fullName>Central</fullName>
                    <color>#A53711</color>
                </value>
                <value>
                    <fullName>Central Division</fullName>
                    <color>#66E9BD</color>
                </value>
                <value>
                    <fullName>Corp. Solution Architects</fullName>
                    <color>#0B24BE</color>
                </value>
                <value>
                    <fullName>Corp National</fullName>
                    <color>#419249</color>
                </value>
                <value>
                    <fullName>Corporate Business Development</fullName>
                    <color>#641CCF</color>
                </value>
                <value>
                    <fullName>Corporate Direct</fullName>
                    <color>#B6E32E</color>
                </value>
                <value>
                    <fullName>Corporate - SA</fullName>
                    <color>#A845DC</color>
                </value>
                <value>
                    <fullName>Corporate Software</fullName>
                    <color>#F96FB7</color>
                </value>
                <value>
                    <fullName>Corp SW Energy &amp; Telco</fullName>
                    <color>#0B24BE</color>
                </value>
                <value>
                    <fullName>Corp SW Microsoft</fullName>
                    <color>#F3D904</color>
                </value>
                <value>
                    <fullName>Corp SW SAP &amp; NetSuite</fullName>
                    <color>#A53711</color>
                </value>
                <value>
                    <fullName>East - SA</fullName>
                    <color>#78C953</color>
                </value>
                <value>
                    <fullName>Federal Government</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                    <color>#8F6429</color>
                </value>
                <value>
                    <fullName>Global Accounts</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                    <color>#EFAE73</color>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                    <color>#0B6FCE</color>
                </value>
                <value>
                    <fullName>Mid-Atlantic</fullName>
                    <color>#78C953</color>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                    <color>#E27001</color>
                </value>
                <value>
                    <fullName>Mountain Division</fullName>
                    <color>#A845DC</color>
                </value>
                <value>
                    <fullName>N2E Small Firm</fullName>
                </value>
                <value>
                    <fullName>N2N (GW) Small Firm</fullName>
                </value>
                <value>
                    <fullName>N2N (JA) Small Firm</fullName>
                </value>
                <value>
                    <fullName>N2N (LF) Small Firm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Month_of_Quota__c</fullName>
        <formula>IF( ISBLANK(Start_Date__c) ,NULL,
IF(DAY(Start_Date__c)&lt;15,
	Date(
	Case( Month (Start_Date__c ),
		1, YEAR(Start_Date__c),
		2, YEAR(Start_Date__c),
		3, YEAR(Start_Date__c),
		4, YEAR(Start_Date__c),
		5, YEAR(Start_Date__c),
		6, YEAR(Start_Date__c),
		7, YEAR(Start_Date__c),
		8, YEAR(Start_Date__c),
		9, YEAR(Start_Date__c),
		10, YEAR(Start_Date__c)+1,
		11, YEAR(Start_Date__c)+1,
		YEAR(Start_Date__c)+1)
	,
	Case( Month (Start_Date__c ),
		1, 4,
		2, 5,
		3, 6,
		4, 7,
		5, 8,
		6, 9,
		7, 10,
		8, 11,
		9, 12,
		10, 1,
		11, 2,
		3)
	,1)
,
	Date(
	Case( Month (Start_Date__c ),
		1, YEAR(Start_Date__c),
		2, YEAR(Start_Date__c),
		3, YEAR(Start_Date__c),
		4, YEAR(Start_Date__c),
		5, YEAR(Start_Date__c),
		6, YEAR(Start_Date__c),
		7, YEAR(Start_Date__c),
		8, YEAR(Start_Date__c),
		9, YEAR(Start_Date__c)+1,
		10, YEAR(Start_Date__c)+1,
		11, YEAR(Start_Date__c)+1,
		YEAR(Start_Date__c)+1)
	,
	Case( Month (Start_Date__c ),
		1, 5,
		2, 6,
		3, 7,
		4, 8,
		5, 9,
		6, 10,
		7, 11,
		8, 12,
		9, 1,
		10, 2,
		11, 3,
		4)
	,1)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Month of Quota</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>High_Level_Division_Stretch__c</fullName>
        <formula>IF( AND( ISPICKVAL(High_Level_Division__c, &quot;Inside Sales&quot;) , ISPICKVAL( Division__c , &quot;R&amp;L ISC&quot;)), &quot;Research &amp; Learning&quot;,
IF( AND( ISPICKVAL(High_Level_Division__c, &quot;Inside Sales&quot;) , ISPICKVAL( Division__c , &quot;Professional SW ISC&quot;)), &quot;Software&quot;,
IF( AND( ISPICKVAL(High_Level_Division__c, &quot;Inside Sales&quot;) , ISPICKVAL( Division__c , &quot;Books &amp; Journal Sales&quot;)), &quot;Research &amp; Learning&quot;,
TEXT(High_Level_Division__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High Level Division Stretch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Level_Division__c</fullName>
        <label>High Level Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Software</fullName>
                    <color>#0B6FCE</color>
                </value>
                <value>
                    <fullName>National &amp; Strategic Accounts</fullName>
                    <color>#E27001</color>
                </value>
                <value>
                    <fullName>Research &amp; Learning</fullName>
                    <color>#A845DC</color>
                </value>
                <value>
                    <fullName>Software</fullName>
                    <color>#F3D904</color>
                </value>
                <value>
                    <fullName>US Small Firms</fullName>
                    <color>#2F5D85</color>
                </value>
                <value>
                    <fullName>Executives</fullName>
                    <color>#419249</color>
                </value>
                <value>
                    <fullName>Sales Operations</fullName>
                    <color>#A53711</color>
                </value>
                <value>
                    <fullName>Service Source</fullName>
                </value>
                <value>
                    <fullName>Solution Design</fullName>
                    <color>#66E9BD</color>
                </value>
                <value>
                    <fullName>Training &amp; Consulting</fullName>
                    <color>#0B24BE</color>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#B6E32E</color>
                </value>
                <value>
                    <fullName>Cap Gemini</fullName>
                </value>
                <value>
                    <fullName>Mid-Market</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Manager__c</fullName>
        <formula>$User.Id =  ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Charge_To__c</fullName>
        <label>License Charge To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Product Development</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>R&amp;L</fullName>
                </value>
                <value>
                    <fullName>R&amp;L Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>SVE</fullName>
                </value>
                <value>
                    <fullName>Training &amp; Consulting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager_Full_Name__c</fullName>
        <description>Used for DashBoard Reports on Opportunity Teams.</description>
        <formula>Manager.FirstName  + &quot; &quot; +  Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <description>Used to pull Profile Name for Validation Rules</description>
        <formula>Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RL_On_Quota__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary field used for R&amp;L sales review reporting</description>
        <label>RL_On_Quota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <formula>UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_DTN__c</fullName>
        <externalId>true</externalId>
        <label>SAP DTN</label>
        <length>7</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SFS_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFS User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSLT_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SSLT Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales411_Email__c</fullName>
        <defaultValue>&quot;Sales411Responses@Wolterskluwer.com&quot;</defaultValue>
        <label>Sales411 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Medium/Large Market</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Learning</fullName>
                </value>
                <value>
                    <fullName>Small Market</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>First day of employment</inlineHelpText>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <formula>CASE( 
MONTH( TODAY()), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
&quot;December&quot;) 

&amp; &quot; &quot; &amp; TEXT(DAY(TODAY())) &amp; &quot;, &quot; &amp; TEXT(YEAR(TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USER_18_digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USER 18 digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueDocID__c</fullName>
        <label>Unique Doc ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upper_Management__c</fullName>
        <formula>Manager.Manager.FirstName + &quot; &quot; +  Manager.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upper Management</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Image_Small__c</fullName>
        <formula>IF( User_Image_URL_Small__c =&quot;&quot;,
IMAGE( &quot;https://c.na25.content.force.com/profilephoto/005/T&quot; , &quot;No User Image&quot;),
IMAGE( User_Image_URL_Small__c , &quot;User Image - Small&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Image - Small</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Image_URL_Small__c</fullName>
        <label>User Image URL - Small</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_ET_Page__c</fullName>
        <label>Default Marketing Cloud Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetUsername__c</fullName>
        <label>Marketing Cloud Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTarget_OAuth_Token__c</fullName>
        <label>Marketing Cloud OAuth Token</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Can_View_Not_Assigned_Prospects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can View Not Assigned Prospects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Key__c</fullName>
        <label>Pardot Api Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Version__c</fullName>
        <label>Pardot Api Version</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Id__c</fullName>
        <label>Pardot User Id</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Key__c</fullName>
        <label>Pardot User Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Role__c</fullName>
        <label>Pardot User Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Division__c</columns>
        <columns>SAP_DTN__c</columns>
        <columns>DTN__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Sales_Reps_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>DTN__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>SU_ACCESS_EXPIRATION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Representative</value>
        </filters>
        <label>Active Sales Reps Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>DTN__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>SU_ACCESS_EXPIRATION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>DTN__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>SU_ACCESS_EXPIRATION</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Data_com</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>JIGSAW_PROSPECTING_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>High_Level_Division__c</field>
            <operation>notEqual</operation>
            <value>,Software,Sales Operations,Solution Design,Training &amp; Consulting,Executives</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Territory</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>notEqual</operation>
            <value>TAA Sales Executives,Billing Team,Manager - R&amp;L Training &amp; Consulting</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Point,Sure,Service</value>
        </filters>
        <label>Data.com</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Ops_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FrozenUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Division__c</columns>
        <columns>SAP_DTN__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_FROZEN</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Frozen Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>InActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>DTN__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>InActive Users</label>
    </listViews>
    <listViews>
        <fullName>Never_Logged_In</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Territory</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Never Logged In</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open_Territory_users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>DTN__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Territory</value>
        </filters>
        <label>Open Territory users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Recently_add_users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>DTN__c</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>9/1/2016 12:00 AM</value>
        </filters>
        <label>Recently added users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SFS_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>DTN__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>SU_ACCESS_EXPIRATION</columns>
        <columns>SFS_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFS_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <label>SFS Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Unfrozen_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Division__c</columns>
        <columns>SAP_DTN__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_FROZEN</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Unfrozen Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Custodial_Rep_no_Identified</fullName>
        <active>true</active>
        <errorConditionFormula>FirstName = &quot;Territory&quot; &amp;&amp;  ISBLANK(Custodial_Rep__c)&amp;&amp; IsActive = TRUE</errorConditionFormula>
        <errorMessage>You must select a Custodial Rep for Open Territory User Accounts</errorMessage>
    </validationRules>
</CustomObject>